--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/home/vander/projetos-git/codes/python/pynetboxdemo/NOcollect_sw_version.py
-/home/vander/projetos-git/codes/python/pynetboxdemo/cloud/
-/home/vander/projetos-git/codes/python/pynetboxdemo/netbox.py
-/home/vander/projetos-git/codes/python/pynetboxdemo/teste_update.py
+~/projetos-git/codes/python/pynetboxdemo/NOcollect_sw_version.py
+~/projetos-git/codes/python/pynetboxdemo/cloud/
+~/projetos-git/codes/python/pynetboxdemo/netbox.py
+~/projetos-git/codes/python/pynetboxdemo/teste_update.py
