Evolution Update files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-~/projetos-git/codes/python/pynetboxdemo/NOcollect_sw_version.py
-~/projetos-git/codes/python/pynetboxdemo/cloud/
-~/projetos-git/codes/python/pynetboxdemo/netbox.py
-~/projetos-git/codes/python/pynetboxdemo/teste_update.py
+*NOcollect_sw_version.py
+*cloud/
+*netbox.py
+*teste_update.py
