--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ lxml==4.8.0
 MarkupSafe==2.1.0
 napalm==3.3.1
 napalm-asa==0.1.4
+napalm-fortios==0.4.1
 ncclient==0.6.12
 netaddr==0.8.0
 netmiko==3.4.0
